?/7/2006 autofs-5.0.1
---------------------
- code cleanup.
- fix race for current map source.
- cthon map parser corrections.
- cthon multi-map locking fix and current race corrections.

13/7/2006 autofs-5.0.1 rc1
--------------------------
- merge LDAP authentication update for GSSAPI (Jeff Moyer).
- update default auth config to add options documenetation (Jeff Moyer).
- workaround segfaults at exit after using GSSAPI library.
- fix not checking return in init_ldap_connection (Jeff Moyer).
- correct test for existence of auth config file.
- correct shutdown log message print.
- correct auth init test when no credentials required.
- correct auto.net installed as auto.smb.
- update LDAP auth - add autodectect option.
- correct test for libhesiod.
- correct directory cleanup in mount modules.
- merge key and wildcard LDAP query for lookups.
- add cacheing of negative lookups to reduce unneeded map lookups.
- version number change to allow update from beta for rpm packages.

29/6/2006 autofs-5.0.0_beta6
----------------------------
- lookup_init cleanup and fix missed memory leak.
- use nis map order to check if update is needed.
- fix couple of memory leaks in lookup_yp.c.
- fix pasre error in replicated server module.
- correct spelling error in default config.
- fix default auth config not being installed.
- change LDAP query method as my test db was incorrect.
- change ldap defaults code to handle missing auth config.
- fix mistake in parsing old style LDAP specs.
- update LDAP so that new query methos also works for old
  syntax.
- allow global macro defines to override system macros.
- cleanup defaults_read_config.
- add rfc2307-bis example map configurations.
- change mode of of config file install to 644.
- update kernel patches.
- fix don't unbind on error return from get_query_dn.
- update RedHat autofs default config.

20/6/2006 autofs-5.0.0_beta5
---------------------------
- re-instate v4 directory cleanup.