@@ -4,6 +4,7 @@
 - fix race for current map source.
 - cthon map parser corrections.
 - cthon multi-map locking fix and current race corrections.
+- cthon shutdown expire fix.
 
 13/7/2006 autofs-5.0.1 rc1
 --------------------------
